--- a/NDA/war/NDA.css
+++ b/NDA/war/NDA.css
@@ -28,6 +28,10 @@ h1 {
   color: red;
 }
 
+.gwt-add-Button{ 
+   color:red;   
+}
+
 /** Set ids using widget.getElement().setId("idOfElement") */
 #closeButton {
   margin: 15px 6px 6px;
